// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppHubHeader /> desktop view should render correctly 1`] = `
<Wrapper__Wrapper>
  <Section__Section>
    <Logo />
    <Line__Line
      partial={true}
    />
    <Link
      iconProps={
        Object {
          "iconName": "Apphub",
          "style": Object {
            "fontSize": "24px",
            "marginRight": "10px",
          },
        }
      }
      onClick={[Function]}
      padding="15px"
      text="App Hub"
      title="App Hub"
      to="/"
    />
    <Line__Line
      partial={true}
    />
    <Link
      onClick={[Function]}
      padding="15px"
      text="test app name"
      title="test app name"
      to="/test-route"
    />
  </Section__Section>
  <Section__Section>
    <UserInfo
      initials="TU"
      name="test user"
    />
    <Line__Line />
    <Link
      checked={false}
      iconProps={
        Object {
          "iconName": "alertsMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/ALERTS_PANEL"
      title="Alerts Panel"
    />
    <Line__Line />
    <Link
      checked={false}
      iconProps={
        Object {
          "iconName": "helpMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/HELP_PANEL"
      title="Help Panel"
    />
    <Line__Line />
    <Link
      checked={false}
      dark={true}
      iconProps={
        Object {
          "iconName": "appHubMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/APPS_PANEL"
      title="Hub Navigation"
    />
  </Section__Section>
</Wrapper__Wrapper>
`;

exports[`<AppHubHeader /> mobile view should render correctly 1`] = `
<Wrapper__Wrapper>
  <Section__Section>
    <Link
      checked={false}
      iconProps={
        Object {
          "iconName": "appMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/APP_NAV_PANEL"
      title="test app name Navigation"
    />
    <Line__Line
      partial={false}
    />
    <Link
      onClick={[Function]}
      padding="15px"
      text="test app name"
      title="test app name"
      to="/test-route"
    />
  </Section__Section>
  <Section__Section>
    <Line__Line />
    <Link
      checked={false}
      iconProps={
        Object {
          "iconName": "alertsMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/ALERTS_PANEL"
      title="Alerts Panel"
    />
    <Line__Line />
    <Link
      checked={false}
      iconProps={
        Object {
          "iconName": "helpMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/HELP_PANEL"
      title="Help Panel"
    />
    <Line__Line />
    <Link
      checked={false}
      dark={true}
      iconProps={
        Object {
          "iconName": "appHubMenu",
        }
      }
      onClick={[Function]}
      panel="app/AppHub/APPS_PANEL"
      title="Hub Navigation"
    />
  </Section__Section>
</Wrapper__Wrapper>
`;
